# api_object_schema

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  LICENSE  Makefile  README.md  setup.cfg  setup.py  tox.ini
api_object_schema/: __init__.py  __version__.py  _compat.py  binding.py  bound_fields.py  field.py  fields.py  special_value.py  type_info.py  utils.py  value_translator.py
doc/: api.rst  changelog.rst  conf.py  index.rst
tests/: test__api_object_schema.py  test_binding.py  test_binding_translation.py  test_fields.py  test_type_info.py  test_utils.py
