[metadata]
name = api_object_schema
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
summary = Utilities for defining schemas of Pythonic objects interacting with external APIs
description-file =
    README.md
description-content-type = text/markdown
license = BSD3
author = Infinidat Ltd.
author_email = info@infinidat.com
url = https://github.com/Infinidat/api_object_schema

[extras]
testing =
    pylint~=1.7.2; python_version=='2.7'
    pylint~=2.3.1; python_version >= '3.4'
    pytest
    coverage
doc =
    alabaster
    docutils
    # All bellow pinning is due to: https://github.com/bitprophet/releases/issues/84
    semantic-version==2.6.0
    releases~=1.6.1
    Sphinx~=1.7.1

[tool:pytest]
testpaths = tests
